[gd_scene load_steps=4 format=3 uid="uid://cewco4f4r603g"]

[ext_resource type="Script" uid="uid://c8pgcxs5kul7o" path="res://components/table_view/table/cell/cell.gd" id="1_ox40q"]
[ext_resource type="PackedScene" uid="uid://bk2g2d2b07n18" path="res://components/table_view/table/column_separator/column_separator.tscn" id="2_udf6q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fc4l8"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.687215, 0.687215, 0.687215, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Cell" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ox40q")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxFlat_fc4l8")
editable = false

[node name="ColumnSeparator" parent="." instance=ExtResource("2_udf6q")]
layout_mode = 2

[connection signal="focus_exited" from="TextEdit" to="." method="_on_text_edit_focus_exited"]
[connection signal="gui_input" from="TextEdit" to="." method="_on_text_edit_gui_input"]
